 - Added createHost() and attachParent() methods to MapletBuilder and RestletContainerBuilder to delay the attachment (dynamic URI pattern) to the 
   parent Maplet after the complete configuration.
 - Renamed DefaultBuilder into ObjectBuilder.
 - Added BuilderFactory and Builders classes to facilitate the instantiation of builders and their eventual subclassing by applications.
   
1.0 beta 12 (2006-05-20)
 - Added com.noelios.restlet.build package containing builder classes allowing a compact construction of Restlet applications base of the Fluent design
	pattern coined by Martin Fowler. Based on suggestion and contribution from Lars Heuer and Yuri de Wit.
 - Added Tutorial 12 illustrating the used of builders to reimplement Tutorial 11.
 - Added buffering to Simple server to solve the performance issue.
 - Removed the Element interface which doesn't bring value to the framework.
 - Renamed "parent" property in Restlet into "owner" to prevent risk of confusion with the tree of Maplets or the tree of builders. 
   Here the owner means the first component ownign or containing the Restlet handler, often a Restlet Container component.
 - Templatized the AbstractRestlet class with a subclass of Call. This way the handle(Get|Put|...) methods directly cast the call to the application's
   specialized Call. This is useful when the application has to enrich the default call using the WrapperCall class as it prevents frequent casts
   and other workarounds such as using a base class. Suggested by Lars Heuer.
 - Renamed CompressChainlet.ALWAYS_ENCODE constant into ENCODE_ALL_SIZES.
 - Added default implementation of GuardChainlet.authorize(Call) method based on a map of login, password couples.
 - When no encoding preferences were provided, we were assuming that all encodings were supported. Now we only assume that the identity encoding is
   supported. Reported by Lars Heuer.