@@ -55,7 +55,7 @@
 
 <h3>Development</h3>
 <ul>
-   <li><a target="_top" href="http://www.restlet.org/downloads/restlet-@version-compact@.zip">Download</a> the <b>@version-full@</b> release (<a target="_top" href="http://blog.noelios.com">announce</a>, <a target="_top" href="http://www.restlet.org/docs/changes">changes log</a>)</li>
+   <li><a target="_top" href="http://www.restlet.org/downloads/restlet-@version-compact@.zip">Download</a> the <b>@version-full@</b> release (<a target="_top" href="http://blog.noelios.com">announces</a>, <a target="_top" href="http://www.restlet.org/docs/changes">changes log</a>)</li>
    <li><a target="_top" href="http://www.restlet.org/discuss">Discuss</a> with users and developers</li>
    <li><a target="_top" href="http://restlet.tigris.org/servlets/ProjectIssues">Report issues</a> (defects, feature, enhancement requests)</li>
    <li><a target="_top" href="http://restlet.tigris.org">Development site</a> at Tigris.org</li>
@@ -64,7 +64,7 @@
 
 <h3>Dependencies</h3>
 <ul>
-   <li>For all applications: <a target="_top" href="http://java.sun.com/j2se/1.5.0/">Java SE 5.0</a> or above</li>
+   <li>For all applications: <a target="_top" href="http://java.sun.com/j2se/1.5.0/">Java SE 5.0</a> or above. Older versions also supported using <a href="http://retroweaver.sourceforge.net">Retroweaver</a>.</li>
    <li>For standalone HTTP servers: <a target="_top" href="http://jetty.mortbay.org">Jetty 5.1 (stable)</a>, <a href="http://jetty.mortbay.org/jetty6/">Jetty 6.0 (beta)</a> or <a target="_top" href="http://www.simpleframework.org">Simple 3.1 (lightest)</a></li>
    <li>For embedded HTTP servers: <a target="_top" href="http://java.sun.com/products/servlet/">Servlet 2.4 container</a></li>
    <li>For dynamic documents: <a target="_top" href="http://www.freemarker.org/">FreeMarker 2.3</a></li>
